--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 GRPC_PORT = 8881
-CORE_DATABASE_URL="user:pass@(localhost:3310)/core?charset=utf8&parseTime=true"
-REMOTE_USER_URL = https://suggestions.dadata.ru/suggestions/api/
-AUTH_REMOTE_KEY = your_key
+CORE_DATABASE_URL=user:pass@(localhost:3311)/user-platform?charset=utf8&parseTime=true
+REMOTE_USER_URL=https://suggestions.dadata.ru/suggestions/api
+AUTH_REMOTE_KEY=
+
+# Database connections
+MYSQL_DATABASE=user-platform
+MYSQL_USER=user
+MYSQL_PASSWORD=pass
+MYSQL_ROOT_PASSWORD=terrible
