Modify user signup & create token

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ MYSQL_DATABASE=user-platform
 MYSQL_USER=user
 MYSQL_PASSWORD=pass
 MYSQL_ROOT_PASSWORD=terrible
+
+# JWT secrets
+JWT_AUDIENCE=dmasters
+JWT_EXPIRATION=60 # Specify in minutes
+JWT_KEY=my_super_secret
