--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
-version : '3.8'
-services :
+version: '3.8'
+services:
   database:
     container_name: user_database
     image: percona/percona-server:latest
+    env_file:
+      - .env
     ports:
       - 3311:3306
     environment:
@@ -11,4 +13,22 @@ services :
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
-      - ./mysql-user-database:/var/lib/mysql
+      - mysql-user-database:/var/lib/mysql
+
+  database-test:
+    container_name: user_database_test
+    image: percona/percona-server:latest
+    env_file:
+      - .env.test
+    ports:
+      - 3312:3306
+    environment:
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    volumes:
+      - mysql-user-database-test:/var/lib/mysql
+volumes:
+  mysql-user-database:
+  mysql-user-database-test:
