--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ MYSQL_DATABASE=user-platform
 MYSQL_USER=user
 MYSQL_PASSWORD=pass
 MYSQL_ROOT_PASSWORD=terrible
+DATABASE_DRIVER=mysql
 
 # JWT secrets
 JWT_AUDIENCE=dmasters
