--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,8 @@ linters-settings:
     min-len: 100
     # minimal occurrences count to trigger, 3 by default
     min-occurrences: 5
+  lll:
+    line-length: 150
 
 issues:
   exclude-rules:
