--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,6 @@ jobs:
         uses: actions/setup-go@v2
       - name: 'Protobuf install'
         uses: arduino/setup-protoc@v1
-        run: find -L api/proto/ -name "*.proto" -exec protoc -I api/proto |
-        --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
+        run: |
+          find -L api/proto/ -name "*.proto" -exec protoc -I api/proto
+          --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
