--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,5 @@ jobs:
       - name: 'Protobuf install'
         uses: arduino/setup-protoc@v1
         run: |
-          echo Hello world
+          find -L api/proto/ -name "*.proto" -exec protoc -I api/proto |
+          --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
