Update github ci cd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,10 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout project'
-        uses: actions/checkout@v2
       - name: 'Setup go'
-        uses: actions/setup-go@v2
-      - name: 'Protobuf install'
-        uses: arduino/setup-protoc@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+      - uses: arduino/setup-protoc@v1
         run: |
           find -L api/proto/ -name "*.proto" -exec protoc -I api/proto |
           --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
