Update github ci cd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
       - uses: actions/setup-go@v2
       - uses: arduino/setup-protoc@v1
         run: |
-          find -L api/proto/ -name "*.proto" -exec protoc -I api/proto |
+          find -L api/proto/ -name "*.proto" -exec protoc -I api/proto
           --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
