Update github ci cd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: push
+on: [push]
 
 jobs:
   prepare:
@@ -8,8 +8,6 @@ jobs:
     steps:
       - name: 'Setup go'
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-      - uses: arduino/setup-protoc@v1
       - run: |
-          find -L api/proto/ -name "*.proto" -exec protoc -I api/proto
-          --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
+          echo "A initial message"
+
