--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
       - uses: arduino/setup-protoc@v1
-      - run: find -L api/proto/ -name "*.proto" -exec protoc -I api/proto
-          --go-grpc_out=require_unimplemented_servers=false:pkg --go_out=pkg {} +
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
