--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/setup-go@v2
       - name: 'Install protoc'
         uses: arduino/setup-protoc@v1
-        run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
