--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ GRPC_PORT = 8881
 CORE_DATABASE_URL=user:pass@(localhost:3311)/user-platform?charset=utf8&parseTime=true
 REMOTE_USER_URL=https://suggestions.dadata.ru/suggestions/api
 AUTH_REMOTE_KEY=
+STRIPE_SECRET_KEY=
+ENCRYPTION_SECRET_KEY=
 
 # Database connections
 MYSQL_DATABASE=user-platform
