--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GRPC_PORT = 8881
-CORE_DATABASE_URL=user:pass@(localhost:3311)/user-platform?charset=utf8&parseTime=true
+CORE_DATABASE_URL=user:pass@(localhost:3311)/user-platform?charset=utf8&multiStatements=true
 REMOTE_USER_URL=https://suggestions.dadata.ru/suggestions/api
 AUTH_REMOTE_KEY=
 STRIPE_SECRET_KEY=
