Add test for my cards with create

--- a/.env.test.dist
+++ b/.env.test.dist
@@ -1,5 +1,5 @@
 GRPC_PORT=8882
-CORE_DATABASE_URL=test:test@(localhost:3312)/user-test?charset=utf8&multiStatements=true
+CORE_DATABASE_URL=test:test@(localhost:3312)/user-test?charset=utf8&multiStatements=true&parseTime=true
 REMOTE_USER_URL=https://suggestions.dadata.ru/suggestions/api
 AUTH_REMOTE_KEY=YOUR_REMOTE_KEY
 
